Fix caption alignment
Squashed commit of the following:

* add releasenote

* fix(caption): center image captions

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -149,6 +149,10 @@ figcaption {
     margin-top: -15px;
 }
 
+figcaption p {
+    text-align: center !important;
+}
+
 /* Text-style: details */
 
 details {
